tests/compilation_failure_tests/non_enum/unit_struct.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
struct Struct;
